[project]
name = "wwechamps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.1",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "mechanicalsoup>=1.3.0",
    "pandas>=2.2.3",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "icecream>=2.1.4",
]
